update: reforzar validaciones de correo y contrasena en registro, login y actualizacion