@@ -5,14 +5,13 @@ public class CreateUserRequest {
     private String nombre;
     private String correo;
     private String contrasena;
-    private String estado;
 
     public CreateUserRequest() {}
 
     public boolean isValid() {
-        return nombre != null && !nombre.trim().isEmpty()
-                && correo != null && !correo.trim().isEmpty()
-                && contrasena != null && !contrasena.trim().isEmpty();
+        return nombre != null && !nombre.isBlank()
+                && correo != null && !correo.isBlank()
+                && contrasena != null && !contrasena.isBlank();
     }
 
     public String getNombre() { return nombre; }
@@ -23,7 +22,4 @@ public class CreateUserRequest {
 
     public String getContrasena() { return contrasena; }
     public void setContrasena(String contrasena) { this.contrasena = contrasena; }
-
-    public String getEstado() { return estado; }
-    public void setEstado(String estado) { this.estado = estado; }
 }
